--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     repo: https://github.com/ZePoulet78/exoCloudNodeJS
     branch: main
     plan: free
-    build: npm run build
+    buildCommand: npm run build
 
 databases:
   - name: exoCloudNodeJS
