--- a/render.yaml
+++ b/render.yaml
@@ -6,12 +6,12 @@ services:
     branch: master
     plan: free
     buildCommand: npm install
-    startCommand: npm run start
-   envVars:
-    - key: DB_URL
-       fromDataBase:
-         name: exoCloudNodeJS
-         property: connectionString
+    startCommand: npm start
+    envVars:
+      - key: DB_URL
+        fromDataBase:
+          name: exoCloudNodeJS
+          property: connectionString
 
 databases:
   - name: exoCloudNodeJS
